fix: compatibilidad Java 8 en cotización e imágenes
- URLEncoder.encode: usar String charset en lugar de StandardCharsets
- Map.of reemplazado por HashMap para compatibilidad Java 8
- isBlank() reemplazado por isEmpty() en CotizacionService

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>